[package]
name = "supertroupers"
version = "0.1.0"
authors = ["minauteur <Thompennington@gmail.com>"]

[dependencies]
rand = "0.3"
# slog = "*"
# hyphenation = "0.6"
text_io = "*"
markov = "*"
serde = "1.0"
colored = "1.6"
# term = "*"
serde_derive = "1.0"
reqwest = "*"

# indicatif = "0.8.0"
# dialoguer = "*"
# console = "*"
[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]