[package]
name = "supertroupers"
version = "0.1.0"
authors = ["minauteur <Thompennington@gmail.com>"]

[dependencies]
# rand = "0.3"
# slog = "*"
hyphenation = "0.6"
# text_io = "*"
markov = "0.0.33"
serde = "1.0"
colored = "1.6"
# term = "*"
serde_derive = "1.0"
reqwest = "0.8.4"

# indicatif = "0.8.0"
# dialoguer = "*"
# console = "*"
textwrap = { version = "0.9", features = ["hyphenation", "term_size"] }
# conrod = "*"
# piston = "*"
# ggez = "0.4"
[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]