[package]
edition = "2021"
name = "supertroupers"
version = "0.1.0"
authors = ["minauteur <Thompennington@gmail.com>"]

[dependencies]
# rand = "0.3"
# slog = "*"
# text_io = "*"
markov = "1.1.0"
serde = "1.0"
colored = "2.0"
# term = "*"
serde_derive = "1.0"
reqwest = { version = "0.11.14", features = ["json"]}
# indicatif = "0.8.0"
# dialoguer = "*"
# console = "*"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
# conrod = "*"
# piston = "*"
# ggez = "0.4"
tokio = { version = "1.26.0", features = ["full"] }
[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]